alterando os links do menu

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="#" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
+            <a href="login.html" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
             <nav>
                 <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
                 <label for="menu-hamburguer">
@@ -25,7 +25,7 @@
                     </div>
                 </label>
                 <ul class="itensMenu">
-                    <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png"
+                    <li><a href="login.html" class="logout"><img src="src/imagens/DeslogarSistema.png"
                                 alt="Deslogar do sistema."></a></li>
                 </ul>
             </nav>
