endereco do menu

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -25,7 +25,7 @@
                     </div>
                 </label>
                 <ul class="itensMenu">
-                    <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png"
+                    <li><a href="login.html" class="logout"><img src="src/imagens/DeslogarSistema.png"
                                 alt="Deslogar do sistema."></a></li>
                 </ul>
             </nav>
