--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="caixaLogin fadeInDown">
             <img src="src/imagens/logoEmPe.png" alt="logomarca ChefPlus">
             <h2>Login</h2>
-            <form method="get" action="paginaInicial.html">
+            <form method="get" action="menuInicial.html">
                 <input type="text" class="loginSenha" name="Usuario" placeholder="Usuário">
                 <input type="password" class="loginSenha" name="senha" placeholder="Senha">
                 <input type="submit" class="botao" value="Login">
