--- a/menuInicial.html
+++ b/menuInicial.html
@@ -7,7 +7,7 @@
     <title>ChefPlus</title>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/menu.css">
-    <link rel="stylesheet" href="src/css/estiloPaginaInicial.css">
+    <link rel="stylesheet" href="src/css/estiloMenuLateral.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -32,21 +32,19 @@
         </div>
         <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
     </header>
-    <main>
-        <div class="corpoPrincipal">
-            <a href="" class="botoesLateral">
-                <img src="src/imagens/Administrador.png">
-                <h3 class="descricaoMenu">Administração</h3>
-            </a>
-            <a href="lancamentoItens.html" class="botoesLateral">
-                <img src="/src/imagens/Mesas.png">
-                <h3 class="descricaoMenu">Módulo Mesas</h3>
-            </a>
-            <a href="" class="botoesLateral">
-                <img src="src/imagens/Relatorios.png">
-                <h3 class="descricaoMenu">Relatórios</h3>
-            </a>
-        </div>
+    <main class="corpoPrincipal">
+        <a href="menuAdministracao.html" class="botoesLateral">
+            <img src="src/imagens/Administracao.png">
+            <h3 class="descricaoMenu">Administração</h3>
+        </a>
+        <a href="lancamentoItens.html" class="botoesLateral">
+            <img src="/src/imagens/Mesas.png">
+            <h3 class="descricaoMenu">Módulo Mesas</h3>
+        </a>
+        <a href="#" class="botoesLateral">
+            <img src="src/imagens/Relatorios.png">
+            <h3 class="descricaoMenu">Relatórios</h3>
+        </a>
     </main>
 </body>
 
