--- a/menuAdministracao.html
+++ b/menuAdministracao.html
@@ -32,23 +32,25 @@
         </div>
         <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
     </header>
-    <main class="corpoPrincipal">
-        <a href="#" class="botoesLateral">
-            <img src="src/imagens/Funcionarios.png">
-            <h3 class="descricaoMenu">Funcionários</h3>
-        </a>
-        <a href="#" class="botoesLateral">
-            <img src="/src/imagens/Produtos.png">
-            <h3 class="descricaoMenu">Produtos</h3>
-        </a>
-        <a href="#" class="botoesLateral">
-            <img src="src/imagens/CaixaAdm.png">
-            <h3 class="descricaoMenu">Caixa</h3>
-        </a>
-        <a href="#" class="botoesLateral">
-            <img src="src/imagens/Parametros.png">
-            <h3 class="descricaoMenu">Parâmetros</h3>
-        </a>
+    <main>
+        <div class="corpoPrincipal">
+            <a href="#" class="botoesLateral">
+                <img src="src/imagens/Funcionarios.png">
+                <h3 class="descricaoMenu">Funcionários</h3>
+            </a>
+            <a href="#" class="botoesLateral">
+                <img src="/src/imagens/Produtos.png">
+                <h3 class="descricaoMenu">Produtos</h3>
+            </a>
+            <a href="#" class="botoesLateral">
+                <img src="src/imagens/CaixaAdm.png">
+                <h3 class="descricaoMenu">Caixa</h3>
+            </a>
+            <a href="#" class="botoesLateral">
+                <img src="src/imagens/Parametros.png">
+                <h3 class="descricaoMenu">Parâmetros</h3>
+            </a>
+        </div>
     </main>
 </body>
 
