--- a/menuInicial.html
+++ b/menuInicial.html
@@ -32,19 +32,21 @@
         </div>
         <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
     </header>
-    <main class="corpoPrincipal">
-        <a href="menuAdministracao.html" class="botoesLateral">
-            <img src="src/imagens/Administracao.png">
-            <h3 class="descricaoMenu">Administração</h3>
-        </a>
-        <a href="lancamentoItens.html" class="botoesLateral">
-            <img src="/src/imagens/Mesas.png">
-            <h3 class="descricaoMenu">Módulo Mesas</h3>
-        </a>
-        <a href="#" class="botoesLateral">
-            <img src="src/imagens/Relatorios.png">
-            <h3 class="descricaoMenu">Relatórios</h3>
-        </a>
+    <main>
+        <div class="corpoPrincipal">
+            <a href="menuAdministracao.html" class="botoesLateral">
+                <img src="src/imagens/Administracao.png">
+                <h3 class="descricaoMenu">Administração</h3>
+            </a>
+            <a href="lancamentoItens.html" class="botoesLateral">
+                <img src="/src/imagens/Mesas.png">
+                <h3 class="descricaoMenu">Módulo Mesas</h3>
+            </a>
+            <a href="#" class="botoesLateral">
+                <img src="src/imagens/Relatorios.png">
+                <h3 class="descricaoMenu">Relatórios</h3>
+            </a>
+        </div>
     </main>
 </body>
 
