--- a/menuAdministracao.html
+++ b/menuAdministracao.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="src/css/menu.css">
     <link rel="stylesheet" href="src/css/scroll.css">
     <link rel="stylesheet" href="src/css/estiloMenuLateral.css">
+    <link rel="stylesheet" href="src/css/estiloCarregamento.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div id="preloader">    
+        <div class="loading-animacao"></div>
+        <span class="title">Carregando</span>
+    </div>
     <header class="header">
         <div class="container">
             <a href="menuInicial.html" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
@@ -52,6 +57,8 @@
             </a>
         </div>
     </main>
+    <script src="src/js/jquery.js"></script>
+    <script src="src/js/carregamento.js"></script>
 </body>
 
 </html>
