finalizando carregamento e logo menu

--- a/menuInicial.html
+++ b/menuInicial.html
@@ -35,7 +35,7 @@
                 </ul>
             </nav>
         </div>
-        <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
+        <img src="" id="logo" alt="logo" class="logo">
     </header>
     <main>
         <div class="corpoPrincipal">
@@ -55,6 +55,7 @@
     </main>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/carregamento.js"></script>
+    <script src="src/js/logo.js"></script>
 </body>
 
 </html>
