--- a/lancamentoItens.html
+++ b/lancamentoItens.html
@@ -41,7 +41,7 @@
                 </ul>
             </nav>
         </div>
-        <img src="src/imagens/logoEscritaLateral.png" alt="logo" class="logo">
+        <img src="" id="logo" alt="logo" class="logo">
     </header>
     <main>
         <div class="corpoPrincipal">
@@ -83,6 +83,7 @@
     </main>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/carregamento.js"></script>
+    <script src="src/js/logo.js"></script>
 </body>
 
 </html>
