--- a/menuInicial.html
+++ b/menuInicial.html
@@ -43,7 +43,7 @@
                 <img src="src/imagens/Administracao.png">
                 <h3 class="descricaoMenu">Administração</h3>
             </a>
-            <a href="lancamentoItens.html" class="botoesLateral">
+            <a href="painelMesas.html" class="botoesLateral">
                 <img src="/src/imagens/Mesas.png">
                 <h3 class="descricaoMenu">Módulo Mesas</h3>
             </a>
