--- a/cadastroProdutos.html
+++ b/cadastroProdutos.html
@@ -26,7 +26,7 @@
     </div>
     <header class="header">
         <div class="container">
-            <a href="menuInicial.html" class="voltar"><img src="src/imagens/Seta.png"
+            <a href="menuAdministracao.html" class="voltar"><img src="src/imagens/Seta.png"
                     alt="Voltar para a tela anterior."></a>
             <nav>
                 <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
@@ -65,17 +65,20 @@
                         <label for="grupo">Grupo:
                             <select name="grupo" id="grupo">
                                 <option value="">Selecione</option>
+                                <option value="">Teste1</option>
                             </select>
                         </label>
                         <label for="subGrupo">Subgrupo:
                             <select name="subGrupo" id="subGrupo">
                                 <option value="">Selecione</option>
+                                <option value="">Teste1</option>
                             </select>
                         </label>
                     </div>
                     <label>Setor de impressão:
                         <select name="setor" id="setorImpressao">
                             <option value="">Selecione</option>
+                            <option value="">Teste1</option>
                         </select>
                     </label>
                     <p>Preço de venda: <input type="text" class="inputInformacoes precoVenda"></p>
@@ -89,8 +92,8 @@
                 <div class="fotoBotoes">
                     <img src="http://placekitten.com/100/120" class="fotoProduto">
                     <div class="botoes">
-                        <img src="src/imagens/Confirmar.png" class="confirmar">
-                        <img src="src/imagens/Cancelar.png" class="cancelar">
+                        <button><img src="src/imagens/Confirmar.png" class="confirmar"></button>
+                        <button><img src="src/imagens/Cancelar.png" class="cancelar"></button>
                     </div>
                 </div>
             </form>
