--- a/menuAdministracao.html
+++ b/menuAdministracao.html
@@ -43,7 +43,7 @@
                 <img src="src/imagens/Funcionarios.png">
                 <h3 class="descricaoMenu">Funcionários</h3>
             </a>
-            <a href="#" class="botoesLateral">
+            <a href="cadastroProdutos.html" class="botoesLateral">
                 <img src="/src/imagens/Produtos.png">
                 <h3 class="descricaoMenu">Produtos</h3>
             </a>
