--- a/cadastroProdutos.html
+++ b/cadastroProdutos.html
@@ -86,7 +86,7 @@
                         <input type="checkbox" id="ativo">
                         <label for="ativo">Ativo</label>
                         <input type="checkbox" id="adicional">
-                        <label for="adiciona">Adicional</label>
+                        <label for="adicional">Adicional</label>
                     </div>
                 </div>
                 <div class="fotoBotoes">
@@ -101,6 +101,7 @@
                 <p>historico</p>
             </form>
         </div>
+        
     </main>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/carregamento.js"></script>
