--- a/cadastroProdutos.html
+++ b/cadastroProdutos.html
@@ -53,7 +53,7 @@
                     <p>Histórico</p>
                 </li>
             </ul>
-            <form action="" method="get" class="cadastroProduto selecionado" id="cadastro-cadastroProduto">
+            <form action="" method="get" class="telaConteudo selecionado" id="tela-cadastroProduto">
                 <div class="informacoesProduto">
                     <div class="codigosProduto">
                         <label>Código: <input type="text" class="inputInformacoes"></label>
@@ -97,16 +97,15 @@
                     </div>
                 </div>
             </form>
-            <form action="" class="cadastroProduto" id="cadastro-historicoProduto">
+            <form action="" method="get" class="telaConteudo" id="tela-historicoProduto">
                 <p>historico</p>
             </form>
         </div>
-        
     </main>
     <script src="src/js/jquery.js"></script>
     <script src="src/js/carregamento.js"></script>
     <script src="src/js/logo.js"></script>
-    <script src="src/js/abasCadastroProduto.js"></script>
+    <script src="src/js/abas.js"></script>
 </body>
 
 </html>
