iniciando cadastro funcionario

--- a/menuAdministracao.html
+++ b/menuAdministracao.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <div class="corpoPrincipal">
-            <a href="#" class="botoesLateral">
+            <a href="cadastroFuncionario.html" class="botoesLateral">
                 <img src="src/imagens/Funcionarios.png">
                 <h3 class="descricaoMenu">Funcionários</h3>
             </a>
